--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 				<button class="ht-menu-toggle"><i class="bi bi-x-lg"></i></button>
 				<div class="mobile-logo">
 					<a href="index.html">
-						<img src="/logo/logo-3.svg" alt="logo">
+						<img src="logo/logo-3.svg" alt="logo">
 					</a>
 				</div>
 				<div class="mobile-menu-wrapper d-lg-none d-inline-block">
@@ -1199,5 +1199,6 @@
 
 
 </body>
+
 
 </html>
